# backtesting

./: .gitignore  CMakeLists.txt  README.md  action.h  bazooka.h  brute_force.h  candle.h  currency.h  ema.h  eth-usdt-1-hour.csv  exceptions.h  formula.h  fraction.h  in_interval.h  indicator.h  interval.h  main.cpp  moving_average.h  order.h  pack.h  point.h  position.h  price.h  range.h  read.h  sma.h  stats.h  strategy.h  test_box.h  trade.h  triple_ema.h  tuple.h
data/: btc-usdt-30-min.csv  eth-usdt-1-hour-iso.csv
data/in/: btc-usdt-1h-test-1.csv
include/: trading.hpp
include/cppcoro/: generator.hpp  recursive_generator.hpp
include/trading/: action.hpp  amount.hpp  amount_t.hpp  candle.hpp  chart_series.hpp  close_position.hpp  concepts.hpp  const_sizer.hpp  convert.hpp  cooler.hpp  criterion.hpp  crossover.hpp  currency.hpp  data_point.hpp  direction.hpp  ema.hpp  equilibrium.hpp  exception.hpp  fee_charger.hpp  formula.hpp  fraction.hpp  fractioner.hpp  function.hpp  generators.hpp  index_t.hpp  int_range.hpp  interface.hpp  labels.hpp  long_position.hpp  long_stats.hpp  long_trade.hpp  ma.hpp  manager.hpp  market.hpp  matchmaker.hpp  money.hpp  motion_tracker.hpp  open_position.hpp  optimizer.hpp  order.hpp  (+36 more)
include/trading/amount/: formula.hpp  long_stats.hpp
include/trading/bazooka/: config.hpp  configuration.hpp  crossover.hpp  factory.hpp  indicator.hpp  indicator_values.hpp  indicator_values_writer.hpp  long_strategy.hpp  (+12 more)
report/diplomova-prace/: ctufit-thesis.cls  ctufit-thesis.tex
src/: CMakeLists.txt  generate-box-overview.ipynb  generate-candles-overview.ipynb  generate-overview-table.ipynb  generate-search-space-overview.ipynb  main.cpp  main.py  plot-best-series.ipynb  plot-candles.ipynb  plot-genetic-algorithm.ipynb  plot-series.ipynb  plot-simulated-annealing.ipynb  plot-tabu-search.ipynb  plot.ipynb  widgets.py
src/.ipynb_checkpoints/: generate-box-overview-checkpoint.ipynb  generate-candles-overview-checkpoint.ipynb  generate-overview-table-checkpoint.ipynb  plot-best-series-checkpoint.ipynb  plot-candles-checkpoint.ipynb  plot-genetic-algorithm-checkpoint.ipynb  plot-series-checkpoint.ipynb  plot-simulated-annealing-checkpoint.ipynb  plot-tabu-search-checkpoint.ipynb
test/: CMakeLists.txt  test.cpp  trading_view.hpp
test/data/: spot-sma-list-of-trades.csv
test/data/in/: spot-sma-list-of-trades.csv
test/data/in/csv/: body-only.csv  complete.csv  header-only.csv
test/trading/: candle.hpp  criterion.hpp  drawdown_tracker.hpp  ema.hpp  fee_charger.hpp  fixtures.hpp  fractioner.hpp  generators.hpp  ma.hpp  market.hpp  motion_tracker.hpp  order_sizer.hpp  position.hpp  resampler.hpp  result.hpp  simulator.hpp  sizer.hpp  sma.hpp  statistics.hpp  trader.hpp  wallet.hpp
test/trading/bazooka/: crossover.hpp  indicator.hpp  manager.hpp  statistics.hpp  strategy.hpp  trader.hpp
test/trading/binance/futures/: position.hpp
test/trading/brute_force/parallel/: optimizer.hpp
test/trading/genetic_algorithm/: matchmaker.hpp  optimizer.hpp  replacement.hpp  selection.hpp
test/trading/indicator/: ema.hpp  ma.hpp  sma.hpp
test/trading/io/csv/: reader.hpp  writer.hpp
test/trading/random/: generators.hpp
test/trading/simulated_annealing/: equilibrium.hpp  optimizer.hpp  progress_collector.hpp
test/trading/systematic/: generators.hpp
test/trading/tabu_search/: memory.hpp  optimizer.hpp
test/trading/view/: stats.hpp
(+90 files in other folders)
